[ADD] First commit

--- a/todo/templates/todo/home.html
+++ b/todo/templates/todo/home.html
@@ -1,6 +1,6 @@
 {% extends 'todo/base.html' %}
 {% block content %}
 
-<b><h1>{{current}}</h1></b>
+<b><h1>Welcome TO Home</h1></b>
 
 {% endblock %}
