--- a/todo/templates/todo/signupuser.html
+++ b/todo/templates/todo/signupuser.html
@@ -37,7 +37,7 @@
 					</div>
 					<input type="submit" value="SIGNUP">
 				</form>
-				<p>Don't have an Account? <a href="#"> Login Now!</a></p>
+				<p>Don't have an Account? <a href="{%url 'loginuser' %}"> Login Now!</a></p>
 			</div>
 		</div>
 		<!-- copyright -->
