--- a/todo/templates/todo/signupuser.html
+++ b/todo/templates/todo/signupuser.html
@@ -24,6 +24,7 @@
 				<form action="#" method="post">
 					{% csrf_token %}
 					{{error}}
+					{{error1}}
 					<input class="text" type="text" name="username" placeholder="Username" required="">
 					<input class="text email" type="email" name="email" placeholder="Email">
 					<input class="text" type="password" name="password1" placeholder="Password" required="">
